--- a/example/index.html
+++ b/example/index.html
@@ -6,15 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>quadtree</title>
-	<script src="libraries/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
 	<script src="../quadtree.js"></script>
 	<script src="sketch.js"></script>
-
-	<script>
-	  p5.disableFriendlyErrors = true;
-	</script>
-
-
 </head>
 <body>
 </body>
