Sliders are now right next to labels
Added css grid styling to put sliders right next to their labels. Also,
I was creating a paragraph for the label, which probably was the cause
of the issues. Now fixed.

--- a/examples/flocking/index.html
+++ b/examples/flocking/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Flocking</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Flocking</title>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
-	<script language="javascript" type="text/javascript" src="../../quadtree.js"></script>
+  <script language="javascript" type="text/javascript" src="../../quadtree.js"></script>
   <script language="javascript" type="text/javascript" src="world.js"></script>
-	<script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <style>
+    .slider {
+      display: inline-grid;
+      grid-template-columns: auto auto;
+	  grid-template-rows: auto;
+    }
+    .slider-param {
+      margin: auto;
+      grid-column: 1/2;
+      grid-row: 1/2;
+    }
+    .slider-label {
+      grid-column: 2/3;
+      grid-row: 1/2;
+    }
+  </style>
 </head>
 <body>
 </body>
